# usbip-ice

./: .gitignore  .uvicorn_env_bridge  Database.py  Device.py  DeviceManager.py  __init__.py  heartbeat.py  pyproject.toml  requirements.txt  server.py  utils.py  worker.py
.github/workflows/: docker.yml
client/: Client.py  ControlAPI.py  EventHandler.py  EventServer.py  FirmwareFlasher.py  README.md  TimeoutDetector.py  cli.py  client.py
client/base/: usbip.py
client/drivers/usbip/: UsbipClient.py  UsbipHandler.py  cli.py
client/lib/: AbstractEventHandler.py  BaseAPI.py
control/: ControlDatabase.py  HeartbeatDatabase.py  README.md  heartbeat.py  server.py
control/flyway/migrations/: V1.1__WorkerProc.sql  V1.3__ReservationProc.sql  V1__Tables.sql
deploy/: Dockerfile  compose.yml
examples/basic/: README.md  main.py
examples/eventhandlers/read_default/: README.md
examples/eventhandlers/read_default_eventhandler_1/: main.py
examples/firmware/flash_usbip/: README.md  main.py
examples/flashing/flash_usbip/: main.py
examples/pulse_count_driver/: main.py
examples/read_default_firmware_1/: README.md  main.py
flyway/migrations/: V1.1__WorkerProc.sql  V1.2__DeviceProc.sql  V1.3__ReservationProc.sql
src/usbipice/: __init__.py
src/usbipice/client/: README.md
src/usbipice/control/: Control.py  ControlDatabase.py  ControlEventSender.py  Heartbeat.py  HeartbeatDatabase.py  ServerDatabase.py  __init__.py  app.py  heartbeat.py  server.py
utils/: Database.py  NotificationSender.py  __init__.py  dev.py  usbip.py  utils.py
worker/: BaseDevice.py  Device.py  DeviceManager.py  README.md  WorkerDatabase.py  __init__.py  requirements.txt  worker.py
worker/device/: Device.py  DeviceEventSender.py  DeviceManager.py  __init__.py
(+74 files in other folders)
