[project]
name = "usbipice"
version = "0.1"
dependencies = [
    "Flask",
    "flask-socketio",
    "websocket-client",
    "uvicorn",
    "pexpect",
    "psycopg[binary]",
    "pyudev",
    "requests",
    "schedule",
    "pyserial",
    "python-dotenv"
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["usbipice"]
package-dir = {"" = "src"}

[project.scripts]
worker = "usbipice:worker.main"
control = "usbipice:control.main"
heartbeat = "usbipice:heartbeat.main"
usbipconnect = "usbipice:usbipconnect.main"



