[project]
name = "usbipice"
version = "0.1"
dependencies = [
    "Flask",
    "flask-socketio",
    "websocket-client",
    "uvicorn",
    "pexpect",
    "psycopg[binary]",
    "pyudev",
    "requests",
    "schedule",
    "pyserial",
    "python-dotenv",
    "asgiref"
]

[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["usbipice"]
package-dir = {"" = "src"}

[project.scripts]
worker = "usbipice:worker.app.run_debug"
control = "usbipice:control.app.run_debug"



